[gd_scene load_steps=10 format=2]

[ext_resource path="res://game_objects/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/tileset.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/jump04.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sounds/jump07.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/sounds/appear.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

extents = Vector2( 9, 9 )

[sub_resource type="Animation" id=2]

resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]

resource_name = "Jump"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=4]

length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 11 ]
}

[node name="Player" type="KinematicBody2D"]
collision/safe_margin = 0.001
script = ExtResource( 1 )
GRAVITY = 120
MAX_FALLING_SPEED = 180

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 10
hframes = 11
frame = 12
region_rect = Rect2( 0, 0, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )
anims/Move = SubResource( 4 )

[node name="jumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="wallKickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="springSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

